--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
-     <link rel="stylesheet" href="style2.css"/>
+     <!-- <link rel="stylesheet" href="style2.css"/> -->
+      <link rel="stylesheet" href="style3.css">
   </head>
   <body>
     <h1>Random Heading</h1>
