Uing Em Unit in CSS

--- a/unit.html
+++ b/unit.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Heading</h1>
+
+    <div id="outer">
+        This is Outer
+        <div id="inner">
+            This is inner
+        </div>
+    </div>
 </body>
 </html>
